# $Id$

2007-07-30	Ivan Y. Khvostishkov

	* main/Utils/Html: HtmlTokenizer arrived from trunk.

2007-07-27	Anton E. Lebedevich

	* main/Utils/ClassUtils.class.php: abstract class support added
	to isInstanceOf.

2007-07-23	Ivan Y. Khvostishkov

	* global.inc.php.tpl: possible security hole fixed on autoload's
	level.

2007-07-12	Konstantin V. Arkhipov

	* 0.10.3 released.

2007-07-10	Ivan Y. Khvostishkov

	* main/Utils/IO/FileOutputStream.class.php: implemented.

	* main/Utils/Logging/: simple but useful classes for logging.

2007-07-10	Dmitry E. Pismenny

	* main/Utils/TextUtils.class.php: special handling for boolean
	values.

2007-07-09	Konstantin V. Arkhipov

	* main/Flow/RedirectView.class.php: now ignores null values.

2007-07-07	Konstantin V. Arkhipov

	* main/Flow/MultiPrefixPhpViewResolver.class.php: resolveViewName now
	throws WrongArgumentException.

2007-07-06	Dmitry E. Pismenny

	* main/Flow/RedirectView.class.php: special handling for boolean
	values.

2007-07-05	Anton E. Lebedevich

	* main/Utils/TidyValidator.class.php: validationErrors renamed to
	messages, added getErrorCount() and getWarningCount().

2007-07-04	Konstantin V. Arkhipov

	* core/Form/Filters/BaseFilter.class.php: now implements
	Instantiatable too.

2007-07-04	Anton E. Lebedevich

	* core/Logic/PostfixUnaryExpression.class.php: renamed from
	UnaryExpression.

	* core/Logic/PrefixUnaryExpression.class.php: implemented unary '-' and
	unary logical 'not'.

2007-07-03	Anton E. Lebedevich

	* core/OSQL/QueryCombination.class.php: added orderBy, limit, offset.

	* core/OSQL/SelectQuery.class.php, core/OSQL/OrderChain.class.php: type
	determination logic moved from SelectQuery to OrderChain.

2007-07-01	Dmitry E. Demidov

	* core/Form/Primitives/PrimitiveIdentifier.class.php: added ability
	get object not only by getById method.

	* main/Utils/ClassUtils.class.php: callStaticMethod, checkStaticMethod
	methods added.

2007-07-01	Konstantin V. Arkhipov
